fix: show svg text on small screen

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -627,6 +627,6 @@ footer {
 
 @media all and (min-width: 490px) {
   .banner {
-    padding: 40px;
+    padding: 20px;
   }
 }
